Fixed all unit test and added pagebreak on print before siemens KPI module

--- a/src/app/layout/reports/longterm/sov/longtermSOV.component.scss
+++ b/src/app/layout/reports/longterm/sov/longtermSOV.component.scss
@@ -78,4 +78,7 @@
         page-break-inside: avoid;
         margin-top: 150px;
     }
+    .page-break-before{
+        page-break-before: always;
+    }
 }
